<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.mytesting.ui.registerscreen.viewmodel.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.registerscreen.activity.RegisterActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/your_name"
                    android:padding="@dimen/padding_10"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/edit_text_background"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTextNormal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@+id/edtNameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/e_mail"
                    android:padding="@dimen/padding_10"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_background"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTextNormal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtRetypeEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@+id/edtEmailLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRetypeEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/re_type_email"
                    android:padding="@dimen/padding_10"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_background"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTextNormal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@+id/edtRetypeEmailLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/password"
                    android:padding="@dimen/padding_10"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_background"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTextNormal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtRePasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@+id/edtPasswordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/re_type_password"
                    android:padding="@dimen/padding_10"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_background"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTextNormal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_marginLeft="@dimen/padding_20"
                android:layout_marginRight="@dimen/padding_20"
                android:layout_marginBottom="@dimen/padding_20"
                android:textColor="@android:color/white"
                android:text="@string/register"
                android:alpha="@{viewModel.enableRegisterBtn ? 1f : 0.3f}"
                android:onClick="@{() -> viewModel.onRegister()}"
                app:layout_constraintTop_toBottomOf="@+id/edtRePasswordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>